fix: align carrousel cards

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5684,7 +5684,7 @@ h6 {
 }
 .team__box .thumb {
   position: relative;
-  min-height: 165px;
+  min-height: 202px;
 }
 .team__box .content {
   position: relative;
